--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <h2>write to PubSub which will write Listener which will write to Cosmos V2</h2>
+  <!-- <h2>write to PubSub which will write Listener which will write to Cosmos V2</h2> -->
 
 
    <div>
       <input type="button" value="Get All Restaurants" id="getServerData"  /><br /><br /><br />
 
-      <input type="button" value="Get Restaurants For This City" id="getCity"  /> 
+      <input type="button" value="Get Restaurants For Specific City" id="getCity"  /> 
       <input type="text" value="" id="whichCity" /><br /><br /><br />
        
       <table id = "tableResult">
