--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
   <!-- <h2>write to PubSub which will write Listener which will write to Cosmos V2</h2> -->
-
+  <h2>Restaurant Review App</h2>
 
    <div>
+     <p>Retrieves from Cosmos DB:</p>
       <input type="button" value="Get All Restaurants" id="getServerData"  /><br /><br /><br />
 
       <input type="button" value="Get Restaurants For Specific City" id="getCity"  /> 
